Add new abstract task type, new AFKCombatHelper task, adjust offset and sleep values. Add primitive color detection.